--- a/public/dusun/style-dusun.css
+++ b/public/dusun/style-dusun.css
@@ -152,23 +152,6 @@ body {
     color: #fff;
 }
 
-.hero .content .cta {
-    margin-top: 1rem;
-    display: inline-block;
-    padding: 0.5rem 2rem;
-    font-size: 1.2rem;
-    color: #fff;
-    background-color: var(--primary);
-    text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
-    border-radius: 0.5rem;
-    box-shadow: 1px 3px rgba(1, 1, 3, 0.5);
-}
-
-.hero .content .cta:hover {
-    background-color: #fff;
-    color: var(--bg);
-}
-
 
 /* About Section*/
 
@@ -338,26 +321,23 @@ body {
 }
 
 .galeri .row .coloum {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 16px;
+    justify-content: center;
     /* border: #222 2px solid;
     border-radius: 10px; */
 }
 
 .galeri .row .coloum .menu-card {
-    text-align: center;
-    padding-bottom: 4rem;
-    width: 300px;
-    height: 300px;
-    overflow: hidden;
-    margin: 1rem;
-    cursor: pointer;
+    transform: scale(1);
 }
 
 .galeri .row .coloum .menu-card img {
     object-fit: cover;
     width: 100%;
-    height: 100%;
+    height: auto;
+    margin-bottom: 1rem;
 }
 
 .galeri .row .coloum .menu-card img::after:hover {
